--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <script type = "module" src="index.js"></script>
 </head>
 <body>
-  <h2>Hello</h2>
+  <button id="clear">clear</button>
 </body>
 </html>
